--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "1.0.0",
   "description": "A macOS app to enforce the 20-20-20 eye care rule",
   "main": "electron/main.js",
+  "homepage": "./",
   "scripts": {
     "start": "electron .",
     "dev": "concurrently \"npm run react-start\" \"wait-on http://localhost:3000 && electron .\"",
     "react-start": "BROWSER=none react-scripts start",
     "react-build": "react-scripts build",
+    "postreact-build": "rm -rf build/electron && cp -r electron build/ && cp build/electron/main.js build/electron.js && node scripts/fix-electron-paths.js",
     "build": "npm run react-build && electron-builder",
-    "build:mac": "npm run react-build && electron-builder --mac",
+    "build:mac": "npm run react-build && electron-builder --mac --config.mac.identity=null",
+    "build:icon": "cd build && node generate-icon.js",
     "dist": "npm run react-build && electron-builder --publish=never"
   },
   "keywords": [
@@ -18,7 +21,7 @@
     "20-20-20",
     "eye-care"
   ],
-  "author": "",
+  "author": "Your Name",
   "license": "MIT",
   "dependencies": {
     "react": "^18.2.0",
@@ -28,15 +31,17 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "concurrently": "^8.2.0",
-    "electron": "^27.0.0",
+    "electron": "^27.3.11",
     "electron-builder": "^24.6.4",
     "react-scripts": "5.0.1",
     "wait-on": "^7.0.1"
   },
   "build": {
-    "appId": "com.breakreminder.app",
-    "productName": "20-20-20 Break Reminder",
+    "appId": "com.twenty202020.app",
+    "productName": "20-20-20",
+    "copyright": "Copyright © 2024",
     "directories": {
+      "output": "dist",
       "buildResources": "build"
     },
     "files": [
@@ -47,8 +52,37 @@
     "mac": {
       "category": "public.app-category.healthcare-fitness",
       "target": [
-        "dmg"
+        {
+          "target": "dmg",
+          "arch": [
+            "arm64",
+            "x64"
+          ]
+        }
+      ],
+      "hardenedRuntime": false,
+      "gatekeeperAssess": false,
+      "identity": null
+    },
+    "dmg": {
+      "title": "20-20-20",
+      "background": null,
+      "contents": [
+        {
+          "x": 130,
+          "y": 220
+        },
+        {
+          "x": 410,
+          "y": 220,
+          "type": "link",
+          "path": "/Applications"
+        }
       ]
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true
     }
   },
   "browserslist": {
